Brief explaination of every piece

--- a/report/common/commandsFile.tex
+++ b/report/common/commandsFile.tex
@@ -120,7 +120,7 @@
 \usepackage{enumitem}
 \usepackage{amssymb}
 \usepackage[pdftex, colorlinks]{hyperref}
-\newcommand{\comment}[1]{{\color{Red}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
+\newcommand{\comment}[1]{{\color{Blue}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
 
 
 % Some utilities\ldots
