--- a/report/common/commandFile.tex
+++ b/report/common/commandFile.tex
@@ -121,7 +121,7 @@
 \usepackage{enumitem}
 \usepackage{amssymb}
 \usepackage[pdftex, colorlinks]{hyperref}
-\newcommand{\comment}[1]{{\color{Red}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
+\newcommand{\comment}[1]{{\color{Blue}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
 
 
 % Some utilities\ldots
