--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -12,7 +12,7 @@
 \centering
 \begin{tabu} to \textwidth { X[1.3,r,p] X[1.7,l,p] }
 \textcolor{Blue}
-{\textbf{\small{AXI Project byColombi, Corbetta, Consonni}}} & \includegraphics[scale=0.5]{./../../img/Images/PolimiLogo}
+{\textbf{\small{AXI Project by Colombi, Corbetta, Consonni}}} & \includegraphics[scale=0.5]{./../../img/Images/PolimiLogo}
 \end{tabu}
 \end{table}}~\\ [7cm]
 
@@ -59,7 +59,7 @@
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
-{\color{Blue}{\section{Axi Protocol}}}
+{\color{Blue}{\section{Introduction}}}
 \label{sect:introduction}
 \input{Files/introduction}
 
