--- a/report/common/commandFile.tex
+++ b/report/common/commandFile.tex
@@ -25,7 +25,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{\color{Gray}{\small{AXI project by Colombi, Corbetta, Consonni}}}
-\lfoot{\textcolor{Gray}{\small{AXI project report}}}
+\lfoot{\textcolor{Gray}{\small{Embedded Systems AA 2020-21 project report}}}
 \rfoot{\textcolor{Gray}{\thepage}}
 \renewcommand{\headrulewidth}{0pt}
 
