--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -9,19 +9,24 @@
 %LOGO
 
 {\begin{table}[t!]
-\centering
-\begin{tabu} to \textwidth { X[1.3,r,p] X[1.7,l,p] }
-\textcolor{Blue}
-{\textbf{\small{AXI Project by Colombi, Corbetta, Consonni}}} & \includegraphics[scale=0.5]{./../../img/Images/PolimiLogo}
-\end{tabu}
-\end{table}}~\\ [7cm]
+%\centering
+%\begin{tabu} to \textwidth { X[1.3,r,p] X[1.7,l,p] }
+{\includegraphics[width=0.8\textwidth]{./../../img/Images/PolimiLogo}}
+\newline
+\textcolor{Blue}{\textbf{\Large{Embedded Systems AA [2020-21] } \newline \small{Colombi, Corbetta, Consonni}}}
+%\end{tabu}
+\end{table}}~ \\ [1cm]
 
 %TITLE
+
+\includegraphics[width=1\textwidth]{./../../img/Images/axi}\\ [1cm]
 
 \begin{flushleft}
 
 %Replace the text string with your title
 {\textcolor{Blue}{\textbf{\Huge{AXI Project}}}} \\ [1cm]
+
+\textcolor{Blue}{\textbf{\Large{Prof. William Fornaciari} \newline \Large{PhD Davide Zoni} \newline \Large{PhD Std Andrea Galimberti}}}
 
 \end{flushleft}
 
@@ -35,10 +40,13 @@
 
 \textbf{Deliverable:} & Report\\
 \textbf{Title:} & Project Report \\
-\textbf{Authors:} & Marco Colombi, \\ & Giorgio Corbetta, Cesare Consonni \\
-\textbf{Version:} & 0.0 \\
-\textbf{Date:} & 15-January-2021 \\
-\textbf{Download page:} & $https://github.com/CesareConsonni/ES_20-21-CCC$ \\
+\textbf{Authors:}
+   & Marco Colombi  10631973 marco3.colombi@mail.polimi.it,
+\\ & Giorgio Corbetta 10570080 giorgio1.corbetta@mail.polimi.it,
+\\ & Cesare Consonni 10476810 cesare.consonni@mail.polimi.it \\
+\textbf{Version:} & 1.0 \\
+\textbf{Date:} & 23-January-2021 \\
+\textbf{Download page:} & \href{https://github.com/CesareConsonni/ES_20-21-CCC}{CCC-AXI git repo} \\
 \hline
 \end{tabu}
 \end{table}
