--- a/report/common/commandsFile.tex
+++ b/report/common/commandsFile.tex
@@ -127,6 +127,12 @@
 \input{./../common/util/highlight}
 \input{./../common/util/abbrev}
 
+\usepackage[T1]{fontenc}
+
+\usepackage[american]{babel}
+
+\usepackage{csquotes}
+\usepackage{biblatex}
 
 
 \date{}
