--- a/report/src/Files/design.tex
+++ b/report/src/Files/design.tex
@@ -2,7 +2,7 @@ Here we will explain how we developed our AXI interconnect, first explaining how
 
 
 {\color{Blue}{\subsection{Block Design}}}
-In the figure \ref{HBLD} is reported the Block Diagram of the AXI interconnect we developed.
+In the figure \ref{HLBD} is reported the Block Diagram of the AXI interconnect we developed.
 
 \begin{figure}[h]
   \includegraphics[width=0.9\textwidth, angle=0]{"./../../img/Images/highLevel.png"}
