--- a/report/src/main.bib
+++ b/report/src/main.bib
@@ -20,7 +20,22 @@
 }
 
 @online{AXIInterconnectGuide,
-    author = "LogiCORE",
+    author = "Vivado XIlinx",
     title = "AXI Interconnect v2.1 LogiCORE IP Product Guide",
+    url = "https://www.xilinx.com/support/documentation/ip_documentation/axi_interconnect/v2_1/pg059-axi-interconnect.pdf",
     keywords = "AXI interconnects, IP, LogiCORE"
+}
+
+@online{AXIUartguide,
+    author = "Vivado Xilinx",
+    title = "AXI UART Lite v2.0 LogiCORE IP Product Guide",
+    url = "https://www.xilinx.com/support/documentation/ip_documentation/axi_uartlite/v2_0/pg142-axi-uartlite.pdf",
+    keywords = "Uart, IP, LogiCORE, Product Guide"
+}
+
+@online{UartBasics,
+    author = "Scott Campbell",
+    title = "Basics of UART communication",
+    url = "https://www.circuitbasics.com/basics-uart-communication",
+    keywords = "Uart"
 }
