--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -62,7 +62,10 @@
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \newpage
 \addcontentsline{toc}{section}{Table of Contents}
-\tableofcontents
+{
+  \hypersetup{linkcolor=black}
+  \tableofcontents
+}
 \newpage
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
@@ -72,7 +75,7 @@
 \input{Files/introduction}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
-\clearpage
+%\clearpage
 {\color{Blue}{\section{Our Design}}}
 \label{sect:design}
 \input{Files/design}
@@ -84,7 +87,7 @@
 \input{Files/uart}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
-\clearpage
+%\clearpage
 {\color{Blue}{\section{Differences}}}
 \label{sect:diff}
 \input{Files/diff}
